[gd_scene load_steps=83 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/smoke/000000000000030.png" type="Texture" id=2]
[ext_resource path="res://Sprites/player/minimalist/Slick ship base.png" type="Texture" id=3]
[ext_resource path="res://Sprites/smoke/smoke 2/Engine_Smoke-1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-5.png" type="Texture" id=5]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/player/cart2/tech char.png" type="Texture" id=10]
[ext_resource path="res://animations/slick.tres" type="Animation" id=11]
[ext_resource path="res://animations/tech anim.tres" type="Animation" id=12]
[ext_resource path="res://Sprites/smoke/000000000000018.png" type="Texture" id=14]
[ext_resource path="res://animations/smoke.tres" type="Animation" id=15]
[ext_resource path="res://animations/new_animation.tres" type="Animation" id=16]
[ext_resource path="res://animations/smoke shadow.tres" type="Animation" id=17]
[ext_resource path="res://animations/shake.tres" type="Animation" id=18]
[ext_resource path="res://Sprites/smoke/000000000000002.png" type="Texture" id=19]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-2.png" type="Texture" id=21]
[ext_resource path="res://Sprites/player/cart_1/Desert_Racer_ISO-3.png" type="Texture" id=22]
[ext_resource path="res://Sprites/player/cart_1/slick card.png" type="Texture" id=23]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-6.png" type="Texture" id=24]
[ext_resource path="res://Sprites/smoke/000000000000035.png" type="Texture" id=25]
[ext_resource path="res://Sprites/smoke/000000000000001.png" type="Texture" id=26]
[ext_resource path="res://Sprites/smoke/000000000000003.png" type="Texture" id=27]
[ext_resource path="res://Sprites/smoke/000000000000004.png" type="Texture" id=28]
[ext_resource path="res://Sprites/smoke/000000000000005.png" type="Texture" id=29]
[ext_resource path="res://Sprites/smoke/000000000000006.png" type="Texture" id=30]
[ext_resource path="res://Sprites/smoke/000000000000007.png" type="Texture" id=31]
[ext_resource path="res://Sprites/smoke/000000000000008.png" type="Texture" id=32]
[ext_resource path="res://Sprites/smoke/000000000000009.png" type="Texture" id=33]
[ext_resource path="res://Sprites/smoke/000000000000010.png" type="Texture" id=34]
[ext_resource path="res://Sprites/smoke/000000000000011.png" type="Texture" id=35]
[ext_resource path="res://Sprites/smoke/000000000000012.png" type="Texture" id=36]
[ext_resource path="res://Sprites/smoke/000000000000013.png" type="Texture" id=37]
[ext_resource path="res://Sprites/smoke/000000000000014.png" type="Texture" id=38]
[ext_resource path="res://Sprites/smoke/000000000000015.png" type="Texture" id=39]
[ext_resource path="res://Sprites/smoke/000000000000016.png" type="Texture" id=40]
[ext_resource path="res://Sprites/smoke/000000000000017.png" type="Texture" id=41]
[ext_resource path="res://Sprites/smoke/000000000000019.png" type="Texture" id=42]
[ext_resource path="res://Sprites/smoke/000000000000020.png" type="Texture" id=43]
[ext_resource path="res://Sprites/smoke/000000000000021.png" type="Texture" id=44]
[ext_resource path="res://Sprites/smoke/000000000000022.png" type="Texture" id=45]
[ext_resource path="res://Sprites/smoke/000000000000023.png" type="Texture" id=46]
[ext_resource path="res://Sprites/smoke/000000000000024.png" type="Texture" id=47]
[ext_resource path="res://Sprites/smoke/000000000000025.png" type="Texture" id=48]
[ext_resource path="res://Sprites/smoke/000000000000026.png" type="Texture" id=49]
[ext_resource path="res://Sprites/smoke/000000000000027.png" type="Texture" id=50]
[ext_resource path="res://Sprites/smoke/000000000000028.png" type="Texture" id=51]
[ext_resource path="res://Sprites/smoke/000000000000029.png" type="Texture" id=52]
[ext_resource path="res://Sprites/smoke/000000000000031.png" type="Texture" id=53]
[ext_resource path="res://Sprites/smoke/000000000000032.png" type="Texture" id=54]
[ext_resource path="res://Sprites/smoke/000000000000033.png" type="Texture" id=55]
[ext_resource path="res://Sprites/smoke/000000000000034.png" type="Texture" id=56]
[ext_resource path="res://Sprites/smoke/000000000000036.png" type="Texture" id=57]
[ext_resource path="res://Sprites/smoke/000000000000037.png" type="Texture" id=58]
[ext_resource path="res://Sprites/smoke/000000000000038.png" type="Texture" id=59]
[ext_resource path="res://Sprites/smoke/000000000000039.png" type="Texture" id=60]
[ext_resource path="res://Sprites/smoke/000000000000040.png" type="Texture" id=61]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-1.png" type="Texture" id=62]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-2.png" type="Texture" id=63]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-3.png" type="Texture" id=64]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-4.png" type="Texture" id=65]
[ext_resource path="res://Sprites/smoke_main_imgs/Smoke_Anim-5.png" type="Texture" id=66]
[ext_resource path="res://animations/crash1.tres" type="Animation" id=67]
[ext_resource path="res://animations/cart_idle.tres" type="Animation" id=68]
[ext_resource path="res://animations/cart_turn_down.tres" type="Animation" id=69]
[ext_resource path="res://animations/cart_turn_up.tres" type="Animation" id=70]
[ext_resource path="res://Sprites/player/cart2/tech cart top.png" type="Texture" id=71]
[ext_resource path="res://Sprites/player/cart2/new tread 1.png" type="Texture" id=72]
[ext_resource path="res://Sprites/player/minimalist/Slick_ship_side_copy-4.png" type="Texture" id=73]
[ext_resource path="res://Sprites/player/minimalist/Slick_ship_side_copy-2.png" type="Texture" id=74]
[ext_resource path="res://Sprites/player/minimalist/Slick_ship_side_copy-1.png" type="Texture" id=75]
[ext_resource path="res://Sprites/player/minimalist/Slick_ship_side_copy-3.png" type="Texture" id=76]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "move anim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("anim_container1/smoke_imgs:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.7, 1.7 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_container1/smoke_imgs:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -159.158, 116.45 ), Vector2( -281.143, 176.906 ), Vector2( -159.158, 116.45 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_container1/smoke_imgs:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0.2, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.607843, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 3.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_container1/smoke_imgs/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 2 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 25 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_container1/smoke_imgs/Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3, 3.3, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 24 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 24 ), ExtResource( 62 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_container1/smoke_imgs/Sprite2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -41.7193, -2.12134 ), Vector2( -176.07, -16.2634 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim_container1/smoke_imgs/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -134.35, -14.1421 ) ]
}

[sub_resource type="Animation" id=4]
length = 3.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_container1/shadow/shadow2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 14 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 2 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 25 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_container1/smoke_imgs/Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7, 3, 3.3, 3.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 24 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 24 ), ExtResource( 62 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_container1/shadow/shadow2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0569108, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -146.571, 4.8322 ), Vector2( -124.942, -2.06532 ), Vector2( -168.471, -2.36464 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim_container1/smoke_imgs/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -134.35, -14.1421 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_container1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3.2819, -46.3989 ), Vector2( 40.9762, -24.8605 ), Vector2( -10.1908, -3.58849 ), Vector2( -19.169, 33.0186 ), Vector2( -30.9762, -4.71875 ), Vector2( -5.11146, -25.9565 ), Vector2( -30.4134, -11.3384 ), Vector2( 6.20206, -9.61487 ), Vector2( -25.4874, 16.5093 ), Vector2( -2.36245, -8.25854 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 75 ), ExtResource( 74 ), ExtResource( 76 ), ExtResource( 73 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/anim_container1/smoke_imgs/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0.588235, 0.333333, 0.0862745 ), Color( 0.686275, 0.588235, 0.333333, 0.0196078 ), Color( 0.686275, 0.588235, 0.333333, 0.00784314 ), Color( 0.686275, 0.588235, 0.333333, 0 ), Color( 0.686275, 0.588235, 0.333333, 0.0196078 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 76 ), ExtResource( 73 ), ExtResource( 76 ), ExtResource( 76 ), ExtResource( 75 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("body:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/anim_container1/smoke_imgs/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.5, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.686275, 0.588235, 0.333333, 0.0862745 ), Color( 0.686275, 0.588235, 0.333333, 0.0196078 ), Color( 0.686275, 0.588235, 0.333333, 0.00784314 ), Color( 0.686275, 0.588235, 0.333333, 0 ), Color( 0.686275, 0.588235, 0.333333, 0.0196078 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 75 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 75 ), ExtResource( 76 ) ]
}

[node name="player" type="Node2D" groups=[
"player",
]]
position = Vector2( 16.5, 0.5 )
rotation = 0.558505
scale = Vector2( 0.13, 0.13 )
z_index = 500
script = ExtResource( 1 )

[node name="body" type="KinematicBody2D" parent="."]
z_index = 200
collision_layer = 0
collision_mask = 0

[node name="debug" type="Label" parent="body"]
visible = false
margin_left = -862.0
margin_top = 259.0
margin_right = -777.0
margin_bottom = 290.0
rect_rotation = -30.0
rect_scale = Vector2( 8, 8 )
custom_colors/font_color = Color( 0.59375, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "index 200"
align = 1
valign = 1
uppercase = true

[node name="anim_container1" type="Node2D" parent="body"]

[node name="shadow" type="Sprite" parent="body/anim_container1"]
visible = false
modulate = Color( 0, 0, 0, 0.196078 )
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 50.2038, 154.143 )
rotation = -0.785398
scale = Vector2( 2, 2 )

[node name="shadow2" type="Sprite" parent="body/anim_container1/shadow"]
visible = false
modulate = Color( 0, 0, 0, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -146.571, 4.8322 )
rotation = -3.72529e-08
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 26 )

[node name="shadow3" type="Sprite" parent="body/anim_container1/shadow"]
visible = false
modulate = Color( 0, 0, 0, 0.784314 )
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -25.2731, 24.3141 )
rotation = -3.72529e-08
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="cart_imgs" type="Node2D" parent="body/anim_container1"]
visible = false
position = Vector2( -288.868, 55.8013 )

[node name="engine1" type="Sprite" parent="body/anim_container1/cart_imgs"]
texture = ExtResource( 72 )

[node name="engine2" type="Sprite" parent="body/anim_container1/cart_imgs"]
modulate = Color( 1, 0.923843, 0.929647, 1 )
texture = ExtResource( 72 )

[node name="engine3" type="Sprite" parent="body/anim_container1/cart_imgs"]
visible = false
modulate = Color( 1, 0.882353, 0.882353, 1 )
texture = ExtResource( 22 )

[node name="detail1" type="Sprite" parent="body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 5 )

[node name="detail2" type="Sprite" parent="body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 6 )

[node name="detail3" type="Sprite" parent="body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 7 )

[node name="detail4" type="Sprite" parent="body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 8 )

[node name="seat" type="Sprite" parent="body/anim_container1/cart_imgs"]
texture = ExtResource( 71 )

[node name="char" type="Sprite" parent="body/anim_container1/cart_imgs"]
rotation = 2.98024e-08
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 10 )

[node name="cart anim" type="AnimationPlayer" parent="body/anim_container1/cart_imgs"]
anims/slick = ExtResource( 11 )
"anims/tech anim" = ExtResource( 12 )

[node name="smoke_imgs" type="Node2D" parent="body/anim_container1"]
position = Vector2( -159.158, 116.45 )
rotation = -0.785398

[node name="Sprite2" type="Sprite" parent="body/anim_container1/smoke_imgs"]
modulate = Color( 1, 1, 1, 0.215686 )
position = Vector2( 31.5743, 3.32225 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="body/anim_container1/smoke_imgs"]
modulate = Color( 1, 0.882353, 0.784314, 0.0784314 )
position = Vector2( -110.04, 104.806 )
rotation = 0.174533
scale = Vector2( 1.2, 0.6 )
texture = ExtResource( 26 )

[node name="col" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )
disabled = true

[node name="smoke_anim" type="AnimationPlayer" parent="body"]
autoplay = "smoke"
playback_speed = 3.0
anims/smoke = ExtResource( 15 )
"anims/smoke (copy)" = ExtResource( 16 )

[node name="smoke_shadow_anim" type="AnimationPlayer" parent="body"]
playback_speed = 5.0
"anims/move anim" = SubResource( 2 )
anims/smoke = ExtResource( 17 )

[node name="shake_anim" type="AnimationPlayer" parent="body"]
playback_speed = 0.25
anims/shake = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="body"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.117647 )
position = Vector2( 30.3387, 61.9962 )
rotation = -0.558505
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="body"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.0784314 )
position = Vector2( -21.0948, 37.0803 )
rotation = -0.558505
scale = Vector2( 1.02, 1.02 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="body"]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 0.0588235 )
position = Vector2( 8.50623, 71.0563 )
rotation = -0.558505
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="body"]
position = Vector2( -28.6312, 32.4014 )
rotation = -0.558505
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 75 )

[node name="preview_body" type="KinematicBody2D" parent="."]
modulate = Color( 0.588235, 0.588235, 1, 0.392157 )
collision_layer = 0
collision_mask = 0

[node name="anim_container1" type="Node2D" parent="preview_body"]

[node name="shadow" type="Sprite" parent="preview_body/anim_container1"]
modulate = Color( 0, 0, 0, 0.196078 )
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 50.2038, 154.143 )
rotation = -0.785398
scale = Vector2( 2, 2 )

[node name="shadow2" type="Sprite" parent="preview_body/anim_container1/shadow"]
modulate = Color( 0, 0, 0, 0.784314 )
position = Vector2( -146.571, 4.8322 )
rotation = -3.72529e-08
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 26 )

[node name="cart_imgs" type="Node2D" parent="preview_body/anim_container1"]
position = Vector2( -39.2439, 90.406 )
rotation = -0.0872665

[node name="engine1" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 20 )

[node name="engine2" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 21 )

[node name="engine3" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 22 )

[node name="detail1" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 5 )

[node name="detail2" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 6 )

[node name="detail3" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 7 )

[node name="detail4" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 8 )

[node name="seat" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
visible = false
texture = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="preview_body/anim_container1/cart_imgs"]
position = Vector2( 63.6777, -50.6453 )
rotation = -0.383972
texture = ExtResource( 3 )

[node name="smoke_imgs" type="Node2D" parent="preview_body/anim_container1"]
modulate = Color( 1, 1, 1, 0.0588235 )
position = Vector2( -301.844, 232.081 )
rotation = -0.785398

[node name="Sprite2" type="Sprite" parent="preview_body/anim_container1/smoke_imgs"]
visible = false
modulate = Color( 1, 1, 1, 0.0196078 )
position = Vector2( -41.7193, -2.12134 )
scale = Vector2( 1, 1.3 )
texture = ExtResource( 62 )

[node name="Sprite" type="Sprite" parent="preview_body/anim_container1/smoke_imgs"]
modulate = Color( 1, 1, 1, 0.784314 )
texture = ExtResource( 26 )

[node name="col" type="CollisionShape2D" parent="preview_body"]
shape = SubResource( 1 )
disabled = true

[node name="smoke_anim" type="AnimationPlayer" parent="preview_body"]
autoplay = "smoke"
playback_speed = 8.0
anims/smoke = SubResource( 3 )

[node name="smoke_shadow_anim" type="AnimationPlayer" parent="preview_body"]
autoplay = "smoke"
playback_speed = 8.0
anims/smoke = SubResource( 4 )

[node name="shake_anim" type="AnimationPlayer" parent="preview_body"]
autoplay = "shake"
anims/shake = SubResource( 5 )

[node name="turn_anim_player" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/crash1 = ExtResource( 67 )
anims/idle = SubResource( 6 )
anims/idle_losing_control = ExtResource( 68 )
anims/turn_down = ExtResource( 69 )
anims/turn_down_player = SubResource( 7 )
anims/turn_up = ExtResource( 70 )
anims/turn_up_player = SubResource( 8 )
[connection signal="animation_finished" from="turn_anim_player" to="." method="_on_turn_anim_player_animation_finished"]
